--- a/index.html
+++ b/index.html
@@ -6,47 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Travel Landing Page</title>
+    <title>School educational Page</title>
 </head>
 
 <body>
     <section class="showcase">
         <header>
-            <h2 class="logo">Locations</h2>
+            <h1 class="logo">Dr.  B.R.Ambedkar Inter College</h1>
             <div class="toggle"></div>
         </header>
+        <div class="wall">
+        <img style=width:80%  src="img.jpeg" >
+       
 
-
-        <video style = width:100% src="Pexels Videos 1926295.mp4"muted loop autoplay></video>
-        <div class="overlay"></div>
+    </div>
+        <div class="overlay">
+            <!-- <img style = width:100% src="WhatsApp Image 2022-06-05 at 5.41.39 PM.jpeg" muted loop autoplay> -->
+        </div>
         <div class="text">
 
             <h2>Never Stop</h2>
             <h3>Exploring The World</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid delectus hic aspernatur veniam
-                perspiciatis dolor quisquam porro ullam corporis accusamus!</p>
-            <a href="https://www.instagram.com/deep__sharan/">Explore Maker</a>
+            <p>A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students under the direction of teachers. Most countries have systems of formal education, which is sometimes compulsory.[2] In these systems, students progress through a series of schools.</p>
+            <a href="https://www.facebook.com/107301852007618/posts/107303492007454/?substory_index=0">School Page</a>
         </div>
-        <ul class="social">
-            <li><a href='#'><img style=width:50px src="facebook.png" alt=""></a></li>
-            <li><a href='#'><img style=width:50px src="twitter.png" alt=""></a></li>
-            <li><a href='#'><img style=width:50px src="insta.png" alt=""></a></li>
-        </ul>
     </section>
-    <div class="menu">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Destination</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
+   
     <script>
         const menutoggle = document.querySelector('.toggle');
         const showcase = document.querySelector('.showcase');
-        
-        menutoggle.addEventListener('click', function(){
+
+        menutoggle.addEventListener('click', function () {
             menutoggle.classList.toggle('active');
             showcase.classList.toggle('active');
         })
