--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Never Stop</h2>
             <h3>Exploring The World</h3>
             <p>A school is an educational institution designed to provide learning spaces and learning environments for the teaching of students under the direction of teachers. Most countries have systems of formal education, which is sometimes compulsory.[2] In these systems, students progress through a series of schools.</p>
-            <a href="https://www.facebook.com/107301852007618/posts/107303492007454/?substory_index=0">School Page</a>
+            <a href="https://m.facebook.com/Dr-B-R-Ambedkar-Inter-College-107301852007618/?__tn__=C-R">School Page</a>
         </div>
     </section>
    
