--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     </div>
         <div class="overlay">
             <!-- <img style = width:100% src="WhatsApp Image 2022-06-05 at 5.41.39 PM.jpeg" muted loop autoplay> -->
+            
+        <video style = width:100% src="Pexels Videos 1926295.mp4"muted loop autoplay></video>
         </div>
         <div class="text">
 
